adding modal class section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           🥇 Highscore: <span class="highscore">0</span>
         </p>
       </section>
+      <section class="modal"></section>
     </main>
     <script src="script.js" defer></script>
   </body>
