Outling modal class sec on html and declared const

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           🥇 Highscore: <span class="highscore">0</span>
         </p>
       </section>
-      <section class="modal"></section>
+      <section class="modal">
+        <p class="correct-message">✅ You got the correct answer</p>
+      </section>
     </main>
     <script src="script.js" defer></script>
   </body>
