adding overlay hidden class section to close modal

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <section class="modal">
         <p class="correct-message">✅ You got the correct answer</p>
       </section>
+      <section class="overlay"></section>
     </main>
     <script src="script.js" defer></script>
   </body>
