adding again button on modal and styling on css

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </section>
       <section class="modal">
         <p class="correct-message">✅ You got the correct answer</p>
+        <button class="again-btn">Play Again;</button>
       </section>
       <section class="overlay"></section>
     </main>
