hidden class attri added to exucute hidden class.

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
           🥇 Highscore: <span class="highscore">0</span>
         </p>
       </section>
-      <section class="modal">
+      <section class="modal hidden">
         <p class="correct-message">✅ You got the correct answer</p>
         <button class="again-btn">Play Again;</button>
       </section>
-      <section class="overlay"></section>
+      <section class="overlay hidden"></section>
     </main>
     <script src="script.js" defer></script>
   </body>
