adding resetGame function to handler/onclick

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </section>
       <section class="modal hidden">
         <p class="correct-message">✅ You got the correct answer</p>
-        <button class="again-btn">Play Again</button>
+        <button class="again-btn" onclick="resetGame()">Play Again</button>
       </section>
       <section class="overlay hidden"></section>
     </main>
